R1 completion: JWT auth, POS, Reports, Users, Config, recipe ingredient CRUD, products price/VAT, plans approve flow, dashboard alerts, admin user management