@@ -1,10 +1,13 @@
 package com.breadcost.security;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -12,32 +15,40 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.provisioning.InMemoryUserDetailsManager;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
+import java.util.List;
 
 /**
- * Security configuration
- * Implements RBAC per RBAC_MATRIX.yaml
+ * Security configuration — JWT stateless + Basic auth fallback for dev
  */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(prePostEnabled = true)
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final JwtAuthFilter jwtAuthFilter;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .cors(cors -> {})  // Enable CORS
-            .csrf(csrf -> csrf.disable())  // Disable CSRF for API testing
+            .cors(cors -> {})
+            .csrf(csrf -> csrf.disable())
+            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers("/h2-console/**").permitAll()
+                .requestMatchers(HttpMethod.POST, "/v1/auth/login").permitAll()
                 .requestMatchers("/v1/**").authenticated()
                 .anyRequest().permitAll()
             )
             .httpBasic(basic -> {})
-            .headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()));  // For H2 console
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+            .headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()));
 
         return http.build();
     }
@@ -47,42 +58,32 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
+    /** In-memory demo users — Basic auth fallback for dev/Postman */
     @Bean
     public UserDetailsService userDetailsService(PasswordEncoder passwordEncoder) {
-        // Demo users per RBAC_MATRIX roles
         UserDetails admin = User.builder()
-                .username("admin")
-                .password(passwordEncoder.encode("admin"))
-                .roles("Admin")
-                .build();
-
-        UserDetails productionUser = User.builder()
-                .username("production")
-                .password(passwordEncoder.encode("production"))
-                .roles("ProductionUser")
-                .build();
-
-        UserDetails financeUser = User.builder()
-                .username("finance")
-                .password(passwordEncoder.encode("finance"))
-                .roles("FinanceUser")
-                .build();
-
+                .username("admin").password(passwordEncoder.encode("admin")).roles("Admin").build();
+        UserDetails production = User.builder()
+                .username("production").password(passwordEncoder.encode("production")).roles("ProductionUser").build();
+        UserDetails finance = User.builder()
+                .username("finance").password(passwordEncoder.encode("finance")).roles("FinanceUser").build();
         UserDetails viewer = User.builder()
-                .username("viewer")
-                .password(passwordEncoder.encode("viewer"))
-                .roles("Viewer")
-                .build();
-
-        return new InMemoryUserDetailsManager(admin, productionUser, financeUser, viewer);
+                .username("viewer").password(passwordEncoder.encode("viewer")).roles("Viewer").build();
+        UserDetails cashier = User.builder()
+                .username("cashier").password(passwordEncoder.encode("cashier")).roles("Cashier").build();
+        UserDetails warehouse = User.builder()
+                .username("warehouse").password(passwordEncoder.encode("warehouse")).roles("Warehouse").build();
+        UserDetails technologist = User.builder()
+                .username("technologist").password(passwordEncoder.encode("technologist")).roles("Technologist").build();
+        return new InMemoryUserDetailsManager(admin, production, finance, viewer, cashier, warehouse, technologist);
     }
 
     @Bean
